[gd_scene load_steps=3 format=3 uid="uid://3jb71hvd25uu"]

[ext_resource type="Script" uid="uid://d0o32uogqeo5r" path="res://Scenes/CreateUser.gd" id="1_4v6tb"]
[ext_resource type="Texture2D" uid="uid://bh5boxrnq33kn" path="res://Images/knopka1(bezbeloi).png" id="2_p5ff2"]

[node name="Create User Window" type="Panel"]
offset_left = 2.0
offset_top = 1.0
offset_right = 352.0
offset_bottom = 222.0
scale = Vector2(1.04882, 0.744828)
script = ExtResource("1_4v6tb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(177.343, 114.12)
scale = Vector2(0.100849, 0.220564)
texture = ExtResource("2_p5ff2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 52.0
offset_right = -9.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EmailLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 25
text = "email"

[node name="EmailText" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UserNameLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 25
text = "UserName"

[node name="UserNameText" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PasswordLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 25
text = "Password"

[node name="PasswordText" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="Submit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Submit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 3.81381
offset_top = 6.71296
offset_right = 239.814
offset_bottom = 214.713
grow_horizontal = 2
scale = Vector2(0.178673, 0.238695)
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "Create User"

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.3141
offset_top = 8.0
offset_right = 35.6859
offset_bottom = 189.0
grow_horizontal = 0
scale = Vector2(0.367413, 0.162646)
theme_override_font_sizes/font_size = 100
text = "x"

[connection signal="button_down" from="VBoxContainer/Submit" to="." method="_on_submit_button_down"]
[connection signal="button_down" from="Close" to="." method="_on_close_button_down"]
